src/objects/echosign_dev1__Attachment_Mutex__c.object
<CustomObject>
    <fields>
        <fullName>echosign_dev1__Attachment_Type__c</fullName>
        <label>Attachment Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Mutex_Key__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Mutex Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>echosign_dev1__Parent_Id__c</fullName>
        <label>Parent Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Version_Id__c</fullName>
        <label>Version Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Attachment Mutex</label>
    <nameField>
        <displayFormat>A{0000000}</displayFormat>
        <label>Attachment Mutex Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Attachments Mutex</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>